// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VideoDescription /> should render description properly 1`] = `
<section
  class=""
>
  <h2>
    Description
  </h2>
  <div
    class="data"
  >
    <h1>
      Hello world
    </h1>
    <p>
       This is a paragraph
    </p>
  </div>
</section>
`;

exports[`<VideoDescription /> should render empty description properly 1`] = `
<section
  class=""
>
  <h2>
    Description
  </h2>
</section>
`;
